src/objects/Controlled_Document_Feed__c.object
<CustomObject>
    <description>This Object is being used by the Controlled Document Tracker application.</description>
    <fields>
        <fullName>Approval_Step_Delegate_Origin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Step Delegate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Controlled_Document__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Controlled Document</label>
        <referenceTo>Controlled_Document__c</referenceTo>
        <relationshipName>Controlled_Document_Feed</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Requested Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Granted_Time__c</fullName>
        <label>Granted Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quick_Share_Origin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quick Share?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Controlled_Document_Feed</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Grant Update Access Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Controlled_Document__c</columns>
        <columns>Status__c</columns>
        <columns>User__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GUA-{0000000}</displayFormat>
        <label>Grant Update Access Requests</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grant Update Access Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>